# target-orders

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  ruff.toml
src/target_orders/: __init__.py  cli.py  data_models.py  inspector.py  main.py  models.py
src/target_orders/utilities/: __init__.py  attrpath.py  bases.py  sentinels.py
tests/: conftest.py  test_models.py
tests/fixtures/: sample_orders_page.html
